--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Holiday</title>
+  <title>EssoTravel</title>
 <!--
 Holiday Template
 http://www.templatemo.com/tm-475-holiday
@@ -30,7 +30,7 @@ http://www.templatemo.com/tm-475-holiday
   		<div class="container">
   			<div class="row">
   				<div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
-  					<a href="#" class="tm-site-name">Holiday</a>	
+  					<a href="#" class="tm-site-name">EssoTravel</a>	
   				</div>
 	  			<div class="col-lg-6 col-md-8 col-sm-9">
 	  				<div class="mobile-menu-icon">
@@ -40,8 +40,8 @@ http://www.templatemo.com/tm-475-holiday
 						<ul>
 							<li><a href="index.html" class="active">Home</a></li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="tours.html">Our Tours</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="tours.html">Our Hotels</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
 					</nav>		
 	  			</div>				
