--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ http://www.templatemo.com/tm-475-holiday
 	  				<nav class="tm-nav">
 						<ul>
 							<li><a href="index.html" class="active">Home</a></li>
-							<li><a href="about.html">About</a></li>
+							<li><a href="about.html">Our Team</a></li>
 							<li><a href="tours.html">Our Hotels</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>		
 	  			</div>				
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-475-holiday
 		    <li>
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">The Best</span> Place</h1>
-					<p class="tm-banner-subtitle">For Your Holidays</p>
+					<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
 					<a href="#more" class="tm-banner-link">Learn More</a>	
 				</div>
 				<img src="img/banner-1.jpg" alt="Image" />	
