--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ http://www.templatemo.com/tm-475-holiday
 		  <ul class="slides">
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">The Best</span> Place</h1>
+					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">The Best</span> Home</h1>
 					<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
 					<a href="#more" class="tm-banner-link">Learn More</a>	
 				</div>
-				<img src="img/banner-1.jpg" alt="Image" />	
+				<img src="img/04.jpg" alt="Image" />	
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
