--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ http://www.templatemo.com/tm-475-holiday
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Lorem <span class="tm-yellow-text">Ipsum</span> Dolor</h1>
-					<p class="tm-banner-subtitle">Wonderful Destinations</p>
+					<h1 class="tm-banner-title"><span class="tm-red-text">Cities</h1>
+					<p class="tm-banner-subtitle">Our Wonderful Destinations</p>
 					<a href="#more" class="tm-banner-link">Learn More</a>	
 				</div>
 		      <img src="img/banner-2.jpg" alt="Image" />
