--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EssoTravel</title>
 <!--
-Holiday Template
+EssoTravel Template
 http://www.templatemo.com/tm-475-holiday
 -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
@@ -58,7 +58,7 @@ http://www.templatemo.com/tm-475-holiday
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">The Best</span> Home</h1>
 					<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
-					<a href="#more" class="tm-banner-link">Learn More</a>	
+					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
 				<img src="img/04.jpg" alt="Image" />	
 		    </li>
@@ -66,7 +66,7 @@ http://www.templatemo.com/tm-475-holiday
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title"><span class="tm-red-text">Cities</h1>
 					<p class="tm-banner-subtitle">Our Wonderful Destinations</p>
-					<a href="#more" class="tm-banner-link">Learn More</a>	
+					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
 		      <img src="img/banner-2.jpg" alt="Image" />
 		    </li>
@@ -74,7 +74,7 @@ http://www.templatemo.com/tm-475-holiday
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title">Proin <span class="tm-yellow-text">Gravida</span> Nibhvell</h1>
 					<p class="tm-banner-subtitle">Velit Auctor</p>
-					<a href="#more" class="tm-banner-link">Learn More</a>	
+					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
 		      <img src="img/banner-3.jpg" alt="Image" />
 		    </li>
