--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ http://www.templatemo.com/tm-475-holiday
 		  <ul class="slides">
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">The Best</span> Home</h1>
+					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">Your Next</span> Home</h1>
 					<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
 					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
@@ -64,17 +64,16 @@ http://www.templatemo.com/tm-475-holiday
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title"><span class="tm-red-text">Cities</h1>
+					<h1 class="tm-banner-title"><span class="tm-yellow-text">Cities</h1>
 					<p class="tm-banner-subtitle">Our Wonderful Destinations</p>
-					<a href="#more" class="tm-banner-link">Load Hotels</a>	
+					<a href="#more" class="tm-banner-link">Learn more</a>	
 				</div>
 		      <img src="img/banner-2.jpg" alt="Image" />
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Proin <span class="tm-yellow-text">Gravida</span> Nibhvell</h1>
-					<p class="tm-banner-subtitle">Velit Auctor</p>
-					<a href="#more" class="tm-banner-link">Load Hotels</a>	
+				    <h1 class="tm-banner-title"><span class="tm-yellow-text">Book </span> Your Stay</h1>
+					<a href="#more" class="tm-banner-link">Book Now</a>	
 				</div>
 		      <img src="img/banner-3.jpg" alt="Image" />
 		    </li>
@@ -92,9 +91,6 @@ http://www.templatemo.com/tm-475-holiday
 					    <li role="presentation" class="active">
 					    	<a href="#hotel" aria-controls="hotel" role="tab" data-toggle="tab">Hotel</a>
 					    </li>
-					    <li role="presentation">
-					    	<a href="#car" aria-controls="car" role="tab" data-toggle="tab">Car Rental</a>
-					    </li>
 					</ul>
 
 					<!-- Tab panes -->
@@ -106,10 +102,10 @@ http://www.templatemo.com/tm-475-holiday
 										<div class="form-group">
 							            	 <select class="form-control">
 							            	 	<option value="">-- Select Hotel -- </option>
-							            	 	<option value="shangrila">Shangri-La</option>
-												<option value="chatrium">Chatrium</option>
-												<option value="fourseasons">Four Seasons</option>
-												<option value="hilton">Hilton</option>
+							            	 	<option value="hotel 1">Hotel 1</option>
+												<option value="hotel 2">Hotel 2</option>
+												<option value="hotel 3">Hotel 3</option>
+												<option value="hotel 4">Hotel 4</option>
 											</select> 
 							          	</div>
 							          	<div class="form-group">
@@ -128,9 +124,20 @@ http://www.templatemo.com/tm-475-holiday
 							                    </span>
 							                </div>
 							            </div>
-							            <div class="form-group margin-bottom-0">
+								    <div class="form-group margin-bottom-0">
 							                <select class="form-control">
-							            	 	<option value="">-- Guests -- </option>
+							            	 	<option value="">-- Number of Visitors -- </option>
+							            	 	<option value="1">1</option>
+												<option value="2">2</option>
+												<option value="3">3</option>
+												<option value="4">4</option>
+												<option value="5p">5+</option>
+											</select> 
+							            </div>
+									</div>									
+								    <div class="form-group margin-bottom-0">
+							                <select class="form-control">
+							            	 	<option value="">-- Number of Visitors -- </option>
 							            	 	<option value="1">1</option>
 												<option value="2">2</option>
 												<option value="3">3</option>
