--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ http://www.templatemo.com/tm-475-holiday
 							            </div>								
 								    <div class="form-group margin-bottom-0">
 							                <select class="form-control">
-							            	 	<option value="">-- Number of Visitors -- </option>
+							            	 	<option value="">-- Number of Rooms -- </option>
 							            	 	<option value="1">1</option>
 												<option value="2">2</option>
 												<option value="3">3</option>
@@ -134,50 +134,6 @@ http://www.templatemo.com/tm-475-holiday
 												<option value="5p">5+</option>
 											</select> 
 							            </div>
-									</div>							
-						            <div class="form-group tm-yellow-gradient-bg text-center">
-						            	<button type="submit" name="submit" class="tm-yellow-btn">Check Now</button>
-						            </div>  
-								</form>
-							</div>
-					    </div>
-					    <div role="tabpanel" class="tab-pane fade tm-white-bg" id="car">
-							<div class="tm-search-box effect2">
-								<form action="#" method="post" class="hotel-search-form">
-									<div class="tm-form-inner">
-										<div class="form-group">
-							            	 <select class="form-control">
-							            	 	<option value="">-- Select Model -- </option>
-							            	 	<option value="shangrila">BMW</option>
-												<option value="chatrium">Mercedes-Benz</option>
-												<option value="fourseasons">Toyota</option>
-												<option value="hilton">Honda</option>
-											</select> 
-							          	</div>
-							          	<div class="form-group">
-							                <div class='input-group date-time' id='datetimepicker3'>
-							                    <input type='text' class="form-control" placeholder="Pickup Date" />
-							                    <span class="input-group-addon">
-							                        <span class="fa fa-calendar"></span>
-							                    </span>
-							                </div>
-							            </div>
-							          	<div class="form-group">
-							                <div class='input-group date-time' id='datetimepicker4'>
-							                    <input type='text' class="form-control" placeholder="Return Date" />
-							                    <span class="input-group-addon">
-							                        <span class="fa fa-calendar"></span>
-							                    </span>
-							                </div>
-							            </div>
-							            <div class="form-group">
-							            	 <select class="form-control">
-							            	 	<option value="">-- Options -- </option>
-							            	 	<option value="">Child Seat</option>
-												<option value="">GPS Navigator</option>
-												<option value="">Insurance</option>
-											</select> 
-							          	</div>							           
 									</div>							
 						            <div class="form-group tm-yellow-gradient-bg text-center">
 						            	<button type="submit" name="submit" class="tm-yellow-btn">Check Now</button>
