--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EssoTravel - Our Team</title>
+  <title>EssoTravels - Our Team</title>
 <!--
-EssoTravel Template
+EssoTravels Template
 http://www.templatemo.com/tm-475-holiday
 -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
@@ -30,7 +30,7 @@ http://www.templatemo.com/tm-475-holiday
   		<div class="container">
   			<div class="row">
   				<div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
-  					<a href="#" class="tm-site-name">EssoTravel</a>	
+  					<a href="#" class="tm-site-name">EssoTravels</a>	
   				</div>
 	  			<div class="col-lg-6 col-md-8 col-sm-9">
 	  				<div class="mobile-menu-icon">
@@ -90,9 +90,9 @@ http://www.templatemo.com/tm-475-holiday
 			    <li>
 			      <img src="img/about-1.jpg" alt="image" />
 			      <div class="flex-caption">
-			      	<h2 class="slider-title">Welcome To EssoTravel</h2>
+			      	<h2 class="slider-title">Welcome To EssoTravels</h2>
 			      	<h3 class="slider-subtitle">Your reference for the best stay in India</h3>
-			      	<p class="slider-description">EssoTravel is good my friend. Believe it or not, you have to use our services... NO WAY HOME.</p>
+			      	<p class="slider-description">EssoTravels is good my friend. Believe it or not, you have to use our services... NO WAY HOME.</p>
 			      	<div class="slider-social">
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -238,11 +238,11 @@ http://www.templatemo.com/tm-475-holiday
 		                		<strong class="text-uppercase">Vedika Kalra</strong>	
 							</div>
 							<div class="tm-testimonial">
-								<p>"Humble reception. I booked my stays 5 times with EssoTravel, and my family enjoyed our vacations."</p>
+								<p>"Humble reception. I booked my stays 5 times with EssoTravels, and my family enjoyed our vacations."</p>
 			                	<strong class="text-uppercase">Choco The Dog</strong>		
 							</div>
 	       					<div class="tm-testimonial">
-	       						<p>"Governments suck. Fuck this shit man. Enjoying a tax-free and space-like experience with EssoTravels."<p>
+	       						<p>"Governments suck. Fuck this shit man. Enjoying a tax-free and space-like experience with EssoTravelss."<p>
 	                			<strong class="text-uppercase">Bertrand K.</strong>
 	       					</div>                	
 						</div>
