--- a/tours.html
+++ b/tours.html
@@ -39,8 +39,8 @@ http://www.templatemo.com/tm-475-holiday
 	  				<nav class="tm-nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="tours.html" class="active">Our Tours</a></li>
+							<li><a href="about.html">Our Team</a></li>
+							<li><a href="tours.html" class="active">Our Hotels</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>		
@@ -221,7 +221,7 @@ http://www.templatemo.com/tm-475-holiday
 			<div class="row">				
 				<div class="tm-section-header">
 					<div class="col-lg-3 col-md-3 col-sm-3"><hr></div>
-					<div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title">Our Tours</h2></div>
+					<div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title">Our Hotels</h2></div>
 					<div class="col-lg-3 col-md-3 col-sm-3"><hr></div>	
 				</div>
 			</div>
