--- a/tours.html
+++ b/tours.html
@@ -306,10 +306,7 @@ http://www.templatemo.com/tm-475-holiday
 	<footer class="tm-black-bg">
 		<div class="container">
 			<div class="row">
-				<p class="tm-copyright-text">Copyright &copy; 2084 Your Company Name 
-                
-                | Designed by templatemo</p>
-			</div>
+				<p class="tm-copyright-text"> Designed by Apo:)</p>
 		</div>		
 	</footer>
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      		<!-- jQuery -->
