--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Holiday - Contact</title>
+	<title>EssosTravels - Contact</title>
 <!--
-Holiday Template
+EssosTravels Template
 http://www.templatemo.com/tm-475-holiday
 -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
@@ -30,7 +30,7 @@ http://www.templatemo.com/tm-475-holiday
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
-					<a href="#" class="tm-site-name">Holiday</a>	
+					<a href="#" class="tm-site-name">EssosTravels</a>	
 				</div>
 				<div class="col-lg-6 col-md-8 col-sm-9">
 					<div class="mobile-menu-icon">
@@ -39,8 +39,8 @@ http://www.templatemo.com/tm-475-holiday
 					<nav class="tm-nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="tours.html">Our Tours</a></li>
+							<li><a href="about.html">Our Team</a></li>
+							<li><a href="tours.html">Our Hotels</a></li>
 							<li><a href="contact.html" class="active">Contact</a></li>
 						</ul>
 					</nav>		
@@ -56,8 +56,8 @@ http://www.templatemo.com/tm-475-holiday
 		  <ul class="slides">
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Your <span class="tm-yellow-text">Special</span> Tour</h1>
-					<p class="tm-banner-subtitle">For Upcoming Holidays</p>
+					<h1 class="tm-banner-title">Your <span class="tm-yellow-text">Reference</span> Hosts</h1>
+					<p class="tm-banner-subtitle">For Upcoming Stays</p>
 					<a href="#more" class="tm-banner-link">Contact Us</a>	
 				</div>
 				<img src="img/banner-3.jpg" alt="Banner 3" />	
@@ -75,11 +75,9 @@ http://www.templatemo.com/tm-475-holiday
 					<li>
 						<img src="img/world-map.png" alt="image" class="contact-image" />
 						<div class="contact-text">
-							<h2 class="slider-title">Lorem Isum Dolor</h2>
-							<h3 class="slider-subtitle">Gravida nibh vel velit auctor aliquet enean sollicitudin lorem quis auctor, nisi elit consequat ipsum</h3>
-							<p class="slider-description">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br><br>
-                            Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris gestas quam, ut aliquam massa nisi.</p>
-							<div class="slider-social">
+							<h2 class="slider-title">At Your Services Across The World</h2>
+							<p class="slider-description">Leave your message to us, and we will contact you in the next 30 mins. <br><br>
+                            			        <div class="slider-social">
 								<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 								<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
 								<a href="#" class="tm-social-icon"><i class="fa fa-pinterest"></i></a>
@@ -139,10 +137,7 @@ http://www.templatemo.com/tm-475-holiday
 	<footer class="tm-black-bg">
 		<div class="container">
 			<div class="row">
-				<p class="tm-copyright-text">Copyright &copy; 2084 Your Company Name 
-                
-                | Designed by templatemo</p>
-			</div>
+				<p class="tm-copyright-text"> Designed by Apo:)</p>
 		</div>		
 	</footer>
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      		<!-- jQuery -->
