--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@ http://www.templatemo.com/tm-475-holiday
 						<img src="img/world-map.png" alt="image" class="contact-image" />
 						<div class="contact-text">
 							<h2 class="slider-title">At Your Services Across The World</h2>
-							<p class="slider-description">Leave your message to us, and we will contact you in the next 30 mins. <br><br>
+							<p class="slider-description">Leave your message bellow, and we will contact you in the next 30 mins. <br><br>
                             			        <div class="slider-social">
 								<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 								<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
