--- a/tours.html
+++ b/tours.html
@@ -89,7 +89,7 @@ http://www.templatemo.com/tm-475-holiday
 				<!-- Nav tabs -->
 				<div class="tm-home-box-1">
 					<ul class="nav nav-tabs tm-white-bg" role="tablist" id="hotelCarTabs">
-					    <li role="presentation" class="nonactive">
+					    <li role="presentation" class="active">
 					    	<a href="#hotel" aria-controls="hotel" role="tab" data-toggle="tab">Hotel</a>
 					    </li>
 					</ul>
