--- a/tours.html
+++ b/tours.html
@@ -103,10 +103,10 @@ http://www.templatemo.com/tm-475-holiday
 										<div class="form-group">
 							            	 <select class="form-control">
 							            	 	<option value="">-- Select Hotel -- </option>
-							            	 	<option value="shangrila">Shangri-La</option>
-												<option value="chatrium">Chatrium</option>
-												<option value="fourseasons">Four Seasons</option>
-												<option value="hilton">Hilton</option>
+							            	 	<option value="hotel 1">Hotel 1</option>
+												<option value="hotel 2">Hotel 2</option>
+												<option value="hotel 3">Hotel 3</option>
+												<option value="hotel 4">Hotel 4</option>
 											</select> 
 							          	</div>
 							          	<div class="form-group">
@@ -124,10 +124,10 @@ http://www.templatemo.com/tm-475-holiday
 							                        <span class="fa fa-calendar"></span>
 							                    </span>
 							                </div>
-							            </div>
-							            <div class="form-group margin-bottom-0">
+							            </div>								
+								    <div class="form-group margin-bottom-0">
 							                <select class="form-control">
-							            	 	<option value="">-- Guests -- </option>
+							            	 	<option value="">-- Number of Rooms -- </option>
 							            	 	<option value="1">1</option>
 												<option value="2">2</option>
 												<option value="3">3</option>
@@ -141,11 +141,10 @@ http://www.templatemo.com/tm-475-holiday
 						            </div>  
 								</form>
 							</div>
-					    </div>			    
+					    </div>				    
 					</div>
 				</div>								
 			</div>
-
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
 					<img src="img/index-01.jpg" alt="image" class="img-responsive">
