--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-475-holiday
 		    <li>
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">Your Next</span> Home</h1>
-					<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
+				    		<span>Live Your Best Days With Us</span>
 					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
 				<img src="img/04.jpg" alt="Image" />	
