--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ http://www.templatemo.com/tm-475-holiday
 	  				<nav class="tm-nav">
 						<ul>
 							<li><a href="index.html" class="active">Home</a></li>
+							<li><a href="bookings.html">My Bookings</a></li>
 							<li><a href="about.html">Our Team</a></li>
 							<li><a href="tours.html">Our Hotels</a></li>
 							<li><a href="contact.html">Contact</a></li>
