--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ http://www.templatemo.com/tm-475-holiday
 				</div>								
 			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-6">
-				<h1 class="tm-banner-title">Only  <span class="tm-yellow-text">7+ days </span> Stays</h1>
-				<p class="tm-banner-subtitle">We offer service for booking of 7 days minimum. <br> Save 30% reduction on the regular hotel price.</p>
+			<div class="okay">
+				<h1 class="kokoko">Only 7+ days Stays</h1>
+				<p class="ko-kokoko">We offer service for booking of 7 days minimum. <br> Save 30% reduction on the regular hotel price.</p>
 			</div>
 		</div>
 	
